--- a/Directive-Features/angular.json
+++ b/Directive-Features/angular.json
@@ -21,6 +21,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/assets"
               {
                 "glob": "**/*",
                 "input": "public"
